update and fix dark mode

--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -1,7 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
+html {
+  color-scheme: dark;
+}
 :root {
   --background: #ffffff;
   --foreground: #171717;
